--- a/.streamlit/style.css
+++ b/.streamlit/style.css
@@ -1,8 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap'); 
 
-html, body, [class*="css"] {
-    font-family: 'Times New Roman'; 
-    font-size: 18px;
-    font-weight: 500;
-    color: #091747;
+@import url('https://fonts.googleapis.com/css2?family=Poiret+One&display=swap');
+body * {
+    font-family: 'Roboto', sans-serif !important;
+}
+.Main_Title * 
+{
+    font-family: 'Poiret One', serif !important;
+    font-weight: 400;
+    font-style: normal;
 }
